# Bybit_tri_Arbitrage

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: __init__.py  bybit_spot.py  bybit_symbols.py  config.py  debug_log.py  models.py  redis_store.py
scripts/: run_dashboard.py
services/: __init__.py
services/bot/: __init__.py  main.py
services/dashboard/: __init__.py  calc.py  edge_calc.py  main.py  paths.py  printer.py  telegram_notify.py  triangles.py  ws_client.py
